branches/wip/Archive/81eddc5b674f23e9b946dabbd4f6d2db-25dabfc2c190f5ef027f31d968947336/output
+ clang++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp:9:25: error: expected ')'
        A() { set_something(foo{}); }
                               ^
main.cpp:9:21: note: to match this '('
        A() { set_something(foo{}); }
                           ^
1 error generated.
